<resources>
    <string name="app_name">PITS Track</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="url">Pick a server</string>
    <string name="drawer_open">drawer is open</string>
    <string name="drawer_close">drawer is close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Address">Address</string>
    <string name="report">Report</string>
    <string name="cancel_button">Don\'t Show again</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="language">Language</string>
    <string name="gmt">GMT</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="str_pass1">Editing profile</string>
    <string name="str_pass2">Please type your password to make changes</string>
    <string name="CANCEL">Cancel</string>
    <string name="select_vehicles">Select Unit</string>
    <string name="km_h">Km/h</string>
    <string name="last_update">Last update</string>
    <string name="vehicle_control">Send Commands</string>
    <string name="vehicle_details">Additional Details</string>
    <string name="send">Send</string>
    <string name="status">Status</string>
    <string name="control">Control</string>
    <string name="meters">Meters</string>
    <string name="km">Km</string>
    <string name="Vehicle_Battery">Unit Battery</string>
    <string name="Internal_Battery">Internal Battery</string>
    <string name="Key">Status</string>
    <string name="Immobilizer">Immobilizer</string>
    <string name="Direction">Direction</string>
    <string name="Hight">Hight</string>
    <string name="Vehicle_Information">Unit Information</string>
    <string name="Vehicle_History">Unit History</string>
    <string name="Monitor_Event">Monitor Event</string>
    <string name="Traveled_Trips">Traveled-Trips</string>
    <string name="Time">Time</string>
    <string name="Driver">Driver</string>
    <string name="Event">Events</string>
    <string name="Speed">Speed</string>
    <string name="Work_Hours">Work Hours - Trips </string>
    <string name="Mileage_KM">Mileage - KM</string>
    <string name="Outside_Work_time">Outside Work time</string>
    <string name="Outside_Work_time_KM">Outside Work time - KM</string>
    <string name="Work_Hours_Period">Work Hours Period</string>
    <string name="Work_Hours_Period_KM">Work Hours Period - KM</string>
    <string name="Work_Hours_Period_p">Work Hours Period %</string>
    <string name="Trip">Trip</string>
    <string name="Events">Events</string>
    <string name="Generate">Done</string>
    ///////////////////////////////////////////////////////////////////
    <string name="Odometer">Odometer</string>
    <string name="Emergency">Emergency</string>
    <string name="Ignition_On">Ignition On</string>
    <string name="Speed_Violation">Speed Violation</string>
    <string name="Main_Power_Low">Main Power Low</string>
    <string name="Accident">Accident</string>
    <string name="Entering_perimeter">Entering perimeter</string>
    <string name="Leaving_perimeter">Leaving perimeter</string>
    <string name="Harsh_Braking">Harsh Braking</string>
    <string name="Door">Door</string>
    <string name="Theft">Theft</string>
    <string name="sms">SMS</string>
    <string name="Temperature">Temperature</string>
    <string name="LostTime">Lost Time</string>
    /////////////////////////////////////////////////////////////////////
    <string name="Vehicle_off">Vehicle - off</string>
    <string name="Vehicle_on">Vehicle - on</string>
    <string name="Siren_off">Siren - off</string>
    <string name="Siren_on">Siren - on</string>
    <string name="Door_open">Door - open</string>
    <string name="Door_close">Door - close</string>
    <string name="thank">Thank you for using PITS Track</string>
    <string name="str3">How was your experience with PITS Track</string>
    <string name="share_few_words">Share few words</string>
    <string name="map">Map</string>
    <string name="info">Information</string>
    <string name="report1">Report - Work Hours - Trips</string>
    <string name="report2">Report- Unit History</string>
    <string name="event">Event</string>
    <string name="str12">No internet connections</string>
    <string name="str13">Wrong password!</string>
    <string name="str14">All Event</string>
    <string name="str15">All Units</string>
    <string name="Beginning">Start Work</string>
    <string name="End">End Work</string>
    <string name="Time_Period">Time Period: </string>
    <string name="Top_Speed">Top Speed: </string>
    <string name="total_time">total time</string>
    <string name="total_odometer">Total odometer</string>
    <string name="addfrom">From</string>
    <string name="addto">To</string>
    <string name="str16">Please Select Unit!</string>
    <string name="str17">No Reports !</string>
    <string name="str18">No Events !</string>
    <string name="sms_message"><![CDATA[ From : %1$s<br/>%2$s]]></string>
    <string name="str33">Be Attention!</string>
    <string name="str34">You are about to send a command are you sure!</string>
    <string name="hint_mag">this report is for</string>
    <string name="Work_Reports">Work Reports</string>
    <string name="Work_hours_e">Work Hour - employee</string>
    <string name="visitsreport">Visits Report</string>
    <string name="report_replay">replies</string>
    <string name="reply">reply</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of PITS Track is available. Please update to new version\s</string>
    <string name="youAreNotUpdatedMessage1">\s now</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="Notification">Notification</string>
    <string name="Sound">Sound</string>
    <string name="Mute">Mute</string>
    <string name="select_location">Select Location</string>
    <string name="str35">New Task</string>
    <string name="str36">Something Wrong! Please try again later</string>
    <string name="str27">Sent succesfully</string>
    <string name="loading">Loading...</string>
    <string name="str38">New task to:</string>
    <string name="replies">Replies</string>
    <string name="postponed">Postponed</string>
    <string name="stops_hours">Stop Hours</string>
    <string name="idlingrep">Idling Report</string>
    <string name="str40">Please Select .....</string>
    <string name="call">Call</string>
    <string name="msg">Message</string>
    <string name="enterroute">Entering Perimeter  Route</string>
    <string name="exitroute">Leaving Perimeter  Route</string>
    <string name="loadMore">Load More</string>
    <string name="allreplies">All Replies</string>
    <string name="morereplay">There are no additional replies</string>
    <string name="str43">Your report has been replied by</string>
    <string name="str44">Your report has been replied with attachment by</string>
    <string name="str45">New task has been sent by</string>
    <string name="str46">New report has been sent by</string>
    <string name="morereport">There are no additional reports</string>
    <string name="Relatedeport">Related Reports</string>
    <string name="startrip">Start Trip</string>
    <string name="endtrip">End Trip</string>
    <string name="customernameerror">Sorry we can not send without select the customer name</string>
    <string name="task">Task</string>
    <string name="attachment">Attachment</string>
    <string name="customer">Customer</string>
    <string name="saveph">Photo saved</string>
    <string name="save">Save</string>
    <string name="tags">Tags</string>
    <string name="show_all">Get all</string>
    <string name="All">ALL</string>


    <string name="Home">Home</string>
    <string name="Hospital">Hospital</string>
    <string name="Hotel">Hotel</string>
    <string name="Library">Library</string>
    <string name="Medical_Laboratory">Medical Laboratory</string>
    <string name="Mosque">Mosque</string>
    <string name="Museum">Museum</string>
    <string name="Park">Park</string>
    <string name="Petrol_Station">Petrol Station</string>
    <string name="Pharmacy">Pharmacy</string>
    <string name="Physician">Physician</string>
    <string name="Police_Office">Police Office</string>
    <string name="Restaurant">Restaurant</string>
    <string name="School">School</string>
    <string name="Shopping_Center">Shopping Center</string>
    <string name="Square_Roundabout">Square Roundabout</string>
    <string name="Stadium">Stadium</string>
    <string name="Supermarket">Supermarket</string>
    <string name="University">University</string>
    <string name="Other">Other</string>
    <string name="ATM">ATM</string>
    <string name="Bank">Bank</string>
    <string name="Coffee_Shop">Coffee Shop</string>
    <string name="Cinema">Cinema</string>
    <string name="Clothing_Store">Clothing Store</string>
    <string name="Company">Company</string>
    <string name="Court">Court</string>
    <string name="Factory">Factory</string>
    <string name="Street">Street</string>
    <string name="Fitness_Center">Fitness Center</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="Details">Details </string>
    <string name="add_location">Add Location</string>
    <string name="category">Category</string>
    <string name="select_loc">Select Location Type *</string>
    <string name="name">Name</string>
    <string name="Navigate">Navigate</string>
    <string name="str42">Please choose source point!</string>
    <string name="distance_write">Distance write: </string>
    <string name="distance_done">Distance done: </string>
    <string name="done_address">Address done: </string>
    <string name="done_time">Time done: </string>
    <string name="product">Product </string>
    <string name="Quantity">Quantity </string>
    <string name="price">Price </string>
    <string name="customer_po">Customer: </string>
    <string name="date_p">Order Date: </string>
    <string name="totalprice">Total Price: </string>
    <string name="order_history">Purchases</string>
    <string name="order">Order</string>
    <string name="price_">Price</string>
</resources>
