<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pagehome"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/login_b2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/pagehome2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.lite.pits_jawwal.pitstracklite.Fount.CustomAutoCompleteTextView
                android:id="@+id/txt_username"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="240dp"
                android:background="@drawable/url_background"
                android:ems="10"
                android:hint="@string/enter_username"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/color_text_black"
                android:textColorHint="@color/color_text_black"
                android:textSize="15sp" />

            <com.lite.pits_jawwal.pitstracklite.Fount.CustomTextViewB
                android:id="@+id/url"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_above="@+id/txt_pass"
                android:layout_alignLeft="@+id/txt_username"
                android:layout_alignStart="@+id/txt_username"
                android:layout_marginBottom="52dp"
                android:background="@drawable/url_background"
                android:ems="10"
                android:hint="@string/url"
                android:inputType="textPersonName"
                android:paddingTop="15dp"
                android:visibility="gone"
                android:textAlignment="center"
                android:textColor="@color/txt"
                android:textColorHint="@color/txt"
                android:textSize="17sp" />

            <com.lite.pits_jawwal.pitstracklite.Fount.CustomEditeTextB
                android:id="@+id/txt_pass"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/txt_username"
                android:layout_alignStart="@+id/txt_username"
                android:layout_below="@+id/txt_username"
                android:layout_marginTop="2dp"
                android:background="@drawable/password"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/color_text_black"
                android:textColorHint="@color/color_text_black"
                android:textSize="15sp" />

            <com.lite.pits_jawwal.pitstracklite.Fount.CustomButtonB
                android:id="@+id/but_login"
                style="@style/AppTheme"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_alignEnd="@+id/txt_pass"
                android:layout_alignRight="@+id/txt_pass"
                android:layout_below="@+id/txt_pass"
                android:layout_marginTop="19dp"
                android:background="@drawable/but_login"
                android:text="@string/login"
                android:textColor="#e6e6e6"
                android:textSize="15sp" />

            <com.lite.pits_jawwal.pitstracklite.Fount.CustomTextViewL
                android:id="@+id/text_full"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:gravity="center"
                android:text="Fully Integrated Tracking Platform "
                android:textColor="#e6e6e6"
                android:layout_below="@id/but_login"
                android:textSize="11sp" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView7"
        android:id="@+id/imag_pits"
        android:layout_above="@+id/text_b"
        android:weightSum="2"
        android:gravity="center"
        >


        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:src="@drawable/logo_mini"
            android:alpha="0.7" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:src="@drawable/logo2"
            android:padding="10dp"
            android:alpha="0.7" />
    </LinearLayout>
    <com.lite.pits_jawwal.pitstracklite.Fount.CustomTextViewL
        android:background="#7099c961"
        android:id="@+id/text_b"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="© powered by Professional Information Technology Services. "
        android:textColor="#ffffff"
        android:textSize="11sp" />
</RelativeLayout>
